--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "echo 'frontend dev server placeholder'",
+    "dev": "svelte-kit dev --host 0.0.0.0",
     "healthz": "echo OK"
   }
 }
