--- a/rust-api/Cargo.toml
+++ b/rust-api/Cargo.toml
@@ -5,3 +5,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+actix-multipart = "0.6"
+tokio = { version = "1", features = ["full"] }
+futures-util = "0.3"
+serde_json = "1"
